Working out the final formats

--- a/frontmatter/titlepages/acceptance.tex
+++ b/frontmatter/titlepages/acceptance.tex
@@ -15,9 +15,11 @@
 % \end{theorem}
 \vspace{1cm}
 
-    \begin{tabular}
-        {l}
-        \\
+    \begin{table}[H]
+        \setlength\extrarowheight{3pt}
+        \hspace*{5cm}
+    \begin{tabular}[]{p{9.5cm}}
+        % {p{9cm}}
         \hline
         Supervisor,\\ 
         \myadvisorA, PhD \\
@@ -38,7 +40,13 @@
         \mydepartment, \mycampus \\
         \myinstitute \\
         \\
+        
+        
+    \end{tabular} 
+
+    \begin{tabular}[]{p{5cm}}
+        \\
         \hline
         Date: 21 November, \thedate
-        
-    \end{tabular}    
+    \end{tabular}
+\end{table}   
