--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-% find . -type f -name 'main.*' -not -name '*.tex' -not -name '*.pdf' -delete
+%%% find . -type f -name 'main.*' -not -name '*.tex' -not -name '*.pdf' -delete
 %%%%% find . -type f -not -name '*.tex'  -newer main.tex -delete
 %%%%% pandoc main.tex -o output/main.docx
 %%%%% pdflatex -output-directory=output main.tex
@@ -20,7 +20,7 @@
 \setlength{\parskip}{0.1cm}
 
 %%%%%%%%%%%%%%%%% END OF PARAGRAPHS CONFIGURATION
-
+ 
 
 %%%%%%%%%%%%%%%%% PREAMBLE
 
@@ -40,7 +40,7 @@
 \newcommand{\myexternal}{Er. Saurav Dhungana}
 \newcommand{\myexternalOffice}{Lead Engineer, Leapfrog Technology, Inc. }
 \newcommand{\myexternalOfficeAddress}{Charkhal Road, Kathmandu, Nepal}
-\newcommand{\mychair}{Prof. Subarna Shakya, PhD} 
+\newcommand{\mychair}{Aman Shakya, PhD} 
 %\newcommand{\myadvisorB}{Department Bertan of Electrical Engineering}
 %\newcommand{\myadvisorC}{Department Bertan of Electrical Engineering}
 
