--- a/frontmatter/titlepages/dissertation.tex
+++ b/frontmatter/titlepages/dissertation.tex
@@ -49,7 +49,11 @@
 {A THESIS  
 
 SUBMITTED TO THE DEPARTMENT OF ELECTRONICS AND
-COMPUTER ENGINEERING IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE DEGREE OF MASTER OF SCIENCE IN COMPUTER SCIENCE AND KNOWLEDGE ENGINEERING
+COMPUTER ENGINEERING 
+
+IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE 
+
+DEGREE OF MASTER OF SCIENCE IN COMPUTER SCIENCE AND KNOWLEDGE ENGINEERING
 }
 \vspace{1cm}
 
