--- a/configs.tex
+++ b/configs.tex
@@ -2,6 +2,7 @@
 
 % \usepackage[english]{babel}  % Last language is the documents standard one.
 \usepackage[T1]{fontenc}
+% \usepackage{book}
 \usepackage{listings}
 \usepackage{hyperref}
 \hypersetup{colorlinks=false}
