--- a/frontmatter/3-dedication.tex
+++ b/frontmatter/3-dedication.tex
@@ -1,5 +1,5 @@
 \doublespacing
-
+\iffalse
 
 \chapter*{Recommendation}
 
@@ -28,16 +28,15 @@ Name:
 
 
 
+\fi
+% \pagebreak
 
-\chapter*{Departmental Acceptance}
-
-\textit{(Use letter department’s letter pad for this page)}
-\vspace{3cm}
+% \chapter*{Departmental Acceptance}
+\chapter*{}
+\addcontentsline{toc}{chapter}{Departmental Acceptance}
+\vspace{2.6cm}
 
 The thesis entitled "\thetitle", submitted by {\theauthor} in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
-
-
-
 
 
 \vspace{3cm}
