--- a/frontmatter/5-acknowledges.tex
+++ b/frontmatter/5-acknowledges.tex
@@ -1,4 +1,6 @@
+
 \chapter*{Acknowledgement}
+\addcontentsline{toc}{chapter}{Acknowledgement}
 
 
 I would like to express the deepest appreciation to my supervisor and Head of Department of Electronics and Computer Engineering, Pulchowk Campus \myadvisorA~ for his guidance throughout the period of this work. His invaluable support, understanding and expertise have been very important in completing this work. It was a great honor for me to pursue my thesis under his supervision.
