--- a/frontmatter/3-dedication.tex
+++ b/frontmatter/3-dedication.tex
@@ -34,9 +34,9 @@ Name:
 % \chapter*{Departmental Acceptance}
 \chapter*{}
 \addcontentsline{toc}{chapter}{Departmental Acceptance}
-\vspace{2.6cm}
+\vspace{2.6cm} 
 
-The thesis entitled "\thetitle", submitted by {\theauthor} in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
+The thesis entitled "Protein Drug Interaction from their Sequence: using SMILES and FASTA", submitted by {\theauthor} in partial fulfillment of the requirement for the award of the degree of “Master of Science in Computer System and Knowledge Engineering” has been accepted as a bonafide record of work independently carried out by him in the department.
 
 
 \vspace{3cm}
