title page manage

--- a/frontmatter/titlepages/dissertation.tex
+++ b/frontmatter/titlepages/dissertation.tex
@@ -16,7 +16,7 @@
 \MakeUppercase{\mycampus }
 
 % \MakeUppercase{ \campusaddress}
-\vspace{1cm}
+\vspace{.8cm}
 
 \begin{flushleft}
    \MakeUppercase{thesis no.: \roll } 
@@ -53,7 +53,7 @@ COMPUTER ENGINEERING
 
 IN PARTIAL FULFILLMENT OF THE REQUIREMENT FOR THE 
 
-DEGREE OF MASTER OF SCIENCE IN COMPUTER SCIENCE AND KNOWLEDGE ENGINEERING
+DEGREE OF MASTER OF SCIENCE IN COMPUTER SYSTEM AND KNOWLEDGE ENGINEERING
 }
 \vspace{1cm}
 
