page number edits

--- a/backmatter/appendix/appendix.tex
+++ b/backmatter/appendix/appendix.tex
@@ -35,9 +35,10 @@
     \end{tabular}
     \label{table:r2r} 
 \end{table}
-\end{landscape}
+\end{landscape} 
 \begin{landscape}
 \section{Proteins Description}
+\setcounter{page}{41}
 \begin{table}[H]
     \caption[Protein Description]{Description of proteins used in the thesis work. Source: https://www.ncbi.nlm.nih.gov/pubmed/ }
     \label{table:protein descriptions}
