spacing title page

--- a/frontmatter/titlepages/dissertation.tex
+++ b/frontmatter/titlepages/dissertation.tex
@@ -16,14 +16,14 @@
 \MakeUppercase{\mycampus }
 
 % \MakeUppercase{ \campusaddress}
-\vspace{.8cm}
+\vspace{1cm}
 
 \begin{flushleft}
    \MakeUppercase{thesis no.: \roll } 
 
    
 \end{flushleft}
-
+\vspace{-.3cm}
 {\thetitle}
 % \mysubtitle
 
