some_minor_changes

--- a/frontmatter/5-acknowledges.tex
+++ b/frontmatter/5-acknowledges.tex
@@ -3,7 +3,7 @@
 \addcontentsline{toc}{chapter}{Acknowledgement}
 
 
-I would like to express the deepest appreciation to my supervisor and Head of Department of Electronics and Computer Engineering, Pulchowk Campus \myadvisorA~ for his guidance throughout the period of this work. His invaluable support, understanding and expertise have been very important in completing this work. It was a great honor for me to pursue my thesis under his supervision.
+I would like to express the deepest appreciation to my supervisor and Head of Department of Electronics and Computer Engineering, Pulchowk Campus \myadvisorA~ for his guidance throughout the period of this work. His invaluable support, understanding and expertise have been very important in completing this work. I would also thank my co-supervisor Dr. Devi Basnet, Senior Research Scientist at Medytox Inc, who guided me to subdivide the problem into simpler divisions of ideas on solving issues.  It was a great honor for me to pursue my thesis under their supervision.
 
 I pay my sincere gratitude to Dr. Aman Shakya, MSCSKE Coordinator for his supervision and help during this research work.
 
